// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllUrlsFromDocsConfig hume gets all urls from docs config 1`] = `
[
  "dev.hume.ai",
  "dev.hume.ai/docs",
  "dev.hume.ai/docs/introduction",
  "dev.hume.ai/intro",
  "dev.hume.ai/docs/introduction/api-key",
  "dev.hume.ai/support",
  "dev.hume.ai/docs/expression-measurement-api",
  "dev.hume.ai/docs/expression-measurement-api/overview",
  "dev.hume.ai/docs/expression-measurement-api/rest",
  "dev.hume.ai/docs/expression-measurement-api/websocket",
  "dev.hume.ai/docs/expression-measurement-api/faqs",
  "dev.hume.ai/docs/custom-models-api",
  "dev.hume.ai/docs/custom-models-api/overview",
  "dev.hume.ai/docs/custom-models-api/creating-your-dataset",
  "dev.hume.ai/docs/custom-models-api/training-a-custom-model",
  "dev.hume.ai/docs/custom-models-api/evaluating-a-custom-model",
  "dev.hume.ai/docs/custom-models-api/faqs",
  "dev.hume.ai/docs/resources",
  "dev.hume.ai/docs/resources/billing",
  "dev.hume.ai/docs/resources/errors",
  "dev.hume.ai/docs/resources/science",
  "dev.hume.ai/docs/resources/use-case-guidelines",
  "dev.hume.ai/docs/resources/privacy",
  "dev.hume.ai/reference",
  "dev.hume.ai/reference/expression-measurement-api",
  "dev.hume.ai/reference/expression-measurement-api/batch",
  "dev.hume.ai/reference/expression-measurement-api/batch/list-jobs",
  "dev.hume.ai/reference/expression-measurement-api/batch/start-inference-job",
  "dev.hume.ai/reference/expression-measurement-api/batch/get-job-details",
  "dev.hume.ai/reference/expression-measurement-api/batch/get-job-predictions",
  "dev.hume.ai/reference/expression-measurement-api/batch/get-artifacts",
  "dev.hume.ai/reference/expression-measurement-api/batch/start-inference-job-with-file",
  "dev.hume.ai/reference/expression-measurement-api/stream",
  "dev.hume.ai/reference/expression-measurement-api/stream/stream",
  "dev.hume.ai/reference/custom-models-api",
  "dev.hume.ai/reference/custom-models-api/files",
  "dev.hume.ai/reference/custom-models-api/files/get-files-and-attributes-by-user",
  "dev.hume.ai/reference/custom-models-api/files/create-files",
  "dev.hume.ai/reference/custom-models-api/files/upload-file",
  "dev.hume.ai/reference/custom-models-api/files/get-file-and-attributes-by-id",
  "dev.hume.ai/reference/custom-models-api/files/delete-file",
  "dev.hume.ai/reference/custom-models-api/files/rename-file",
  "dev.hume.ai/reference/custom-models-api/files/get-predictions-by-file-id",
  "dev.hume.ai/reference/custom-models-api/datasets",
  "dev.hume.ai/reference/custom-models-api/datasets/list-datasets",
  "dev.hume.ai/reference/custom-models-api/datasets/create-dataset-1",
  "dev.hume.ai/reference/custom-models-api/datasets/get-dataset-by-id",
  "dev.hume.ai/reference/custom-models-api/datasets/update-dataset",
  "dev.hume.ai/reference/custom-models-api/datasets/delete-dataset",
  "dev.hume.ai/reference/custom-models-api/datasets/list-dataset-versions",
  "dev.hume.ai/reference/custom-models-api/datasets/get-files-from-dataset-latest-version",
  "dev.hume.ai/reference/custom-models-api/datasets/get-dataset-version-by-id",
  "dev.hume.ai/reference/custom-models-api/datasets/get-files-from-dataset-version",
  "dev.hume.ai/reference/custom-models-api/models",
  "dev.hume.ai/reference/custom-models-api/models/get-model-by-id",
  "dev.hume.ai/reference/custom-models-api/models/rename-model",
  "dev.hume.ai/reference/custom-models-api/models/get-external-model-versions-by-id",
  "dev.hume.ai/reference/custom-models-api/models/update-model-version-description",
  "dev.hume.ai/reference/custom-models-api/models/get-models-by-user-and-name",
  "dev.hume.ai/reference/custom-models-api/models/get-model-versions-by-query",
  "dev.hume.ai/reference/custom-models-api/jobs",
  "dev.hume.ai/reference/custom-models-api/jobs/start-inference-jobs",
  "dev.hume.ai/reference/custom-models-api/jobs/start-transfer-learning-inference-jobs",
]
`;

exports[`getNavigationRoot hume gets navigation root for docs 1`] = `
{
  "redirect": "/intro",
  "type": "redirect",
}
`;

exports[`getNavigationRoot hume gets navigation root for reference 1`] = `
{
  "redirect": "/reference/expression-measurement-api/batch/list-jobs",
  "type": "redirect",
}
`;

exports[`getNavigationRoot hume gets navigation root for reference/expression-measurement-api/stream 1`] = `
{
  "redirect": "/reference/expression-measurement-api/stream/stream",
  "type": "redirect",
}
`;

exports[`getNavigationRoot hume gets navigation root for support 1`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "fullSlug": [
        "support",
      ],
      "id": "docs/pages/documentation/introduction/support.mdx",
      "slug": [
        "support",
      ],
      "title": "Support",
      "type": "page",
      "urlSlug": "support",
    },
    "currentTabIndex": 0,
    "currentVersionIndex": -1,
  },
  "type": "found",
}
`;
